Modified iFolderAdmin.resx in ENglish to correct a spell mistake
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/iFolder_3.7.2_beta4@7222 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/iFolderAdmin.resx
+++ b/src/admin/iFolderAdmin.resx
@@ -869,7 +869,7 @@
 		<value>Server Not Reachable</value>
 	</data>
 	<data name="SESSIONCLOSED">
-		<value>The username or password you enterd is incorrect. Please log in.</value>
+		<value>The username or password you entered is incorrect. Please log in.</value>
 	</data>
 	<data name="SESSIONSTAG">
 		<value>Sessions:</value>
